--- a/display-exercise.html
+++ b/display-exercise.html
@@ -17,6 +17,17 @@
 </head>
 <body>
 <!-- your HTML here to implement the colored box design -->
-	<p>Placeholder!</p>
+    <div class="main">
+        <div class="upper-row">
+            <div class="green box"></div>
+            <div class="blue box"></div>
+        </div>
+        <div class="lower-row">
+            <div class="gray box"></div>
+            <div class="black box"></div>
+            <div class="orange box"></div>
+        </div>
+    </div>
+
 </body>
 </html>
